prettier, eslint setup added

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "webpack --config webpack.config.prod.js",
     "dev": "webpack-dev-server --open --config webpack.config.dev.js",
     "dev:hot": "npm run dev -- --hot",
-    "test": "jest"
+    "test": "jest",
+    "format": "pretty-quick",
+    "lint": "eslint src/**/*.js"
   },
   "author": "",
   "license": "ISC",
@@ -31,8 +33,12 @@
     "@testing-library/react": "^9.3.2",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
+    "eslint": "^6.7.0",
+    "eslint-plugin-react": "^7.16.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
+    "prettier": "^1.19.1",
+    "pretty-quick": "^2.0.1",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
     "webpack-bundle-analyzer": "^3.6.0",
